--- a/style.css
+++ b/style.css
@@ -1,42 +1,40 @@
-body,html{
+body, html {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
-    background:linear-gradient(#007e47,#0e224b,#001b3b);
+    background: linear-gradient(#007E47, #0E224B,#001B3B);
     background-repeat: no-repeat;
 }
-
 @font-face {
     font-family: PixelFont;
     src: url('fonts/retro-land-mayhem.ttf');
 }
-.container{
+
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#canvas{
+#canvas {
     width: 450px;
     height: 550px;
-    background-image:url('backgrounds/space1.jpg') ;
+    background-image: url('backgrounds/space1.jpg');
 }
-
-.menu{
+.menu {
     width: 450px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.score, .hp, .bullets{
+.score, .hp, .bullets {
     color: white;
-    font-style: 30px;
+    font-size: 30px;
     font-family: 'PixelFont';
 }
-
-.hp img, .bullets img{
+.hp img, .bullets img {
     width: 25px;
 }
